--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "fs-extra": "^11.2.0",
     "inquirer": "^9.2.12",
     "qr-image": "^3.2.0"
   }
