--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "fs": "^0.0.1-security",
     "fs-extra": "^11.2.0",
     "inquirer": "^9.2.12",
-    "qr-image": "^3.2.0"
+    "memfs": "^4.6.0",
+    "qr-image": "^3.2.0",
+    "uuid": "^9.0.1"
   }
 }
